--- a/public/css/main.css
+++ b/public/css/main.css
@@ -8,6 +8,11 @@
 
 body {
   min-height: 1000px;
+  font-size: 10px;
+}
+
+a {
+  text-decoration: none;
 }
 
 .header {
@@ -20,11 +25,23 @@ body {
   flex-direction: column;
   justify-content: space-between;
   height: 90vh;
+  position: relative;
+}
+
+.header::after {
+  background: linear-gradient( 0deg, rgba(0, 0, 0, 0.6) 0%, rgba(0, 212, 255, 0) 75% );
+  content: '';
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
 }
 
 .container {
   width: 960px;
   margin: 0 auto;
+  z-index: 2;
 }
 
 .navbar {
@@ -46,9 +63,8 @@ body {
 }
 
 .navbar__menu__item a {
-  text-decoration: none;
   color: #fff;
-  font-size: 12px;
+  font-size: 1.3em;
   font-weight: bold;
   transition: .3s;
   text-transform: uppercase;
@@ -69,11 +85,16 @@ body {
   height: 45px;
 }
 
-.navbar__user span {
+.navbar__user a {
   display: block;
+  color: #fff;
   margin-left: 1rem;
   font-weight: bold;
   font-size: 12px;
+}
+
+.navbar__user a:hover {
+  color: #e4bb23;
 }
 
 .featured {
@@ -84,4 +105,77 @@ body {
   font-size: 4.2rem;
   margin: 0;
   text-transform: uppercase;
+}
+
+.featured__labels {
+  display: flex;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.featured__labels__item {
+  margin: 1rem 1rem 1rem 0;
+  font-size: 1rem;
+}
+
+.featured__button {
+  display: inline-block;
+  border-radius: 30px;
+  background-color: #e4bb23;
+  color: #333;
+  padding: 15px 50px;
+  font-size: 1rem;
+  margin: 1rem 0;
+  transition: .3s;
+}
+
+.featured__button:hover {
+  filter: brightness(90%);
+}
+
+.featured__button i {
+  position: absolute;
+  font-size: 1.5rem;
+  float: right;
+  margin-top: -3px;
+  margin-left: 10px;
+}
+
+.featured__info {
+  font-size: 1rem;
+}
+
+.featured__info p:last-child {
+  color: #e4bb23;
+}
+
+.catalog__menu {
+  border-bottom: 1px solid #33333321;
+}
+
+.catalog__menu ul {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+}
+
+.catalog__menu ul li {
+  padding: 20px 0;
+}
+
+.catalog__menu ul li a {
+  font-size: 1.2rem;
+  color: #e4bb23;
+  margin: 1rem;
+  background: #fff;
+  cursor: pointer;
+  padding: 20px 10px;
+}
+
+.catalog__menu ul li a:hover {
+  border-bottom: 1px solid #e4bb23;
 }
