--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,6 +1,10 @@
 @import url(https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css);
 @import url(https://fonts.googleapis.com/css?family=Montserrat:400,700);
 
+:root {
+  --yellow: #e4bb23;
+}
+
 *, html, body {
   font-family: "Montserrat", sans-serif;
 	box-sizing: border-box;
@@ -16,7 +20,7 @@ a {
 }
 
 .header {
-  padding: 20px 5rem;
+  padding: 20px 5em;
   background-image: url(../img/capa-madmax2.jpg);
   background-attachment: fixed;
   background-size: cover;
@@ -59,7 +63,7 @@ a {
 }
 
 .navbar__menu__item {
-  margin: 0 1.5rem;
+  margin: 0 1.5em;
 }
 
 .navbar__menu__item a {
@@ -71,7 +75,7 @@ a {
 }
 
 .navbar__menu__item a:hover {
-  color: #e4bb23;
+  color: var(--yellow);
 }
 
 .navbar__user {
@@ -88,13 +92,13 @@ a {
 .navbar__user a {
   display: block;
   color: #fff;
-  margin-left: 1rem;
+  margin-left: 1em;
   font-weight: bold;
   font-size: 12px;
 }
 
 .navbar__user a:hover {
-  color: #e4bb23;
+  color: var(--yellow);
 }
 
 .featured {
@@ -102,7 +106,8 @@ a {
 }
 
 .featured__title {
-  font-size: 4.2rem;
+  line-height: 1.2em;
+  font-size: 6.5em;
   margin: 0;
   text-transform: uppercase;
 }
@@ -115,19 +120,19 @@ a {
 }
 
 .featured__labels__item {
-  margin: 1rem 1rem 1rem 0;
-  font-size: 1rem;
+  margin: 1em 1em 1em 0;
+  font-size: 1.4em;
 }
 
 .featured__button {
   display: inline-block;
   border-radius: 30px;
-  background-color: #e4bb23;
+  background-color: var(--yellow);
   color: #333;
   padding: 15px 50px;
-  font-size: 1rem;
-  margin: 1rem 0;
+  margin: 1em 0;
   transition: .3s;
+  font-size: 1.5em;
 }
 
 .featured__button:hover {
@@ -136,18 +141,18 @@ a {
 
 .featured__button i {
   position: absolute;
-  font-size: 1.5rem;
+  font-size: 1.5em;
   float: right;
   margin-top: -3px;
   margin-left: 10px;
 }
 
 .featured__info {
-  font-size: 1rem;
+  font-size: 1.4em;
 }
 
 .featured__info p:last-child {
-  color: #e4bb23;
+  color: var(--yellow);
 }
 
 .catalog__menu {
@@ -156,26 +161,129 @@ a {
 
 .catalog__menu ul {
   display: flex;
+  list-style-type: none;
   justify-content: center;
   align-items: center;
   margin: 0;
   padding: 0;
-  list-style-type: none;
 }
 
 .catalog__menu ul li {
-  padding: 20px 0;
+  padding: 25px 0;
 }
 
 .catalog__menu ul li a {
-  font-size: 1.2rem;
-  color: #e4bb23;
-  margin: 1rem;
+  font-size: 0.8em;
+  font-weight: bold;
+  color: var(--yellow);
+  margin: 1em;
   background: #fff;
   cursor: pointer;
-  padding: 20px 10px;
+  padding: 25px 5px;
+  text-transform: uppercase;
 }
 
 .catalog__menu ul li a:hover {
-  border-bottom: 1px solid #e4bb23;
+  border-bottom: 1px solid var(--yellow);
+}
+
+.footer {
+  padding: 20px 0;
+}
+
+.footer__content {
+  display: flex;
+  justify-content: space-between;
+}
+
+.footer__social ul {
+  display: flex;
+  list-style-type: none;
+}
+
+.footer__social ul li {
+  margin-left: 2.2em;
+}
+
+.footer__social ul li a {
+  font-size: 1em;
+  font-size: 1.5em;
+  color: #bababa;
+  transition: .2s;
+}
+
+.icon--twitter:hover {
+  color: #55acee;
+}
+
+.icon--facebook:hover {
+  color: #3b5998;
+}
+
+.icon--instagram:hover {
+  color: #e95950;
+}
+
+.catalog__items {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  column-gap: 1em;
+  list-style-type: none;
+}
+
+.card {
+  margin-top: 2em;
+  box-shadow: 2px 2px 10px #3333;
+  border-radius: 10px;
+
+}
+
+.card img {
+  width: 100%;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+  overflow: hidden;
+}
+
+.card__content {
+  padding: 1em;
+}
+
+.card__title {
+  margin: 0;
+  font-size: 1.5em;
+  text-transform: uppercase;
+  font-weight: bold;
+}
+
+.card__labels {
+  font-size: 2em;
+}
+
+.card__labels a {
+  color: var(--yellow);
+}
+
+.card__labels a:hover {
+  text-decoration: underline;
+}
+
+.card__footer {
+  display: flex;
+  justify-content: space-between;
+  font-size: 2em
+}
+
+.card__footer i {
+  color: #ccc;
+  transition: .3s;
+  cursor: pointer;
+}
+
+.card__footer i:hover {
+  color: #e74c3c;
+}
+
+.card__footer span {
+  font-weight: bold;
 }
